tests/syntactic/syntax10/syntax10.err
Error: syntax error, unexpected * in file syntax10.dl at line 1
*
^-
1 errors generated, evaluation aborted
